fix address tag default truncation width

--- a/src/components/AddressTag.scss
+++ b/src/components/AddressTag.scss
@@ -17,7 +17,7 @@
         margin-bottom: 0;
         padding-bottom: 0;
         text-overflow: clip;
-        width: 37px;
+        width: 36px;
         display: inline-flex;
         overflow: hidden;
         font-family: monospace;
